--- a/templates/pages/form-project.html
+++ b/templates/pages/form-project.html
@@ -4,9 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
-  <link rel="stylesheet" href="../css/normalize.css">
-  <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href="../css/flatpickr.min.css">
+  <link rel="stylesheet" href="../../css/normalize.css">
+  <link rel="stylesheet" href="../../css/style.css">
 </head>
 
 <body>
@@ -16,7 +15,7 @@
   <div class="container container--with-sidebar">
     <header class="main-header">
       <a href="#">
-        <img src="../img/logo.png" width="153" height="42" alt="Логитип Дела в порядке">
+        <img src="../../img/logo.png" width="153" height="42" alt="Логитип Дела в порядке">
       </a>
 
       <div class="main-header__side">
@@ -69,39 +68,13 @@
       </section>
 
       <main class="content__main">
-        <h2 class="content__main-heading">Добавление задачи</h2>
+        <h2 class="content__main-heading">Добавление проекта</h2>
 
         <form class="form"  action="index.html" method="post" autocomplete="off">
           <div class="form__row">
-            <label class="form__label" for="name">Название <sup>*</sup></label>
+            <label class="form__label" for="project_name">Название <sup>*</sup></label>
 
-            <input class="form__input" type="text" name="name" id="name" value="" placeholder="Введите название">
-          </div>
-
-          <div class="form__row">
-            <label class="form__label" for="project">Проект <sup>*</sup></label>
-
-            <select class="form__input form__input--select" name="project" id="project">
-              <option value="">Входящие</option>
-            </select>
-          </div>
-
-          <div class="form__row">
-            <label class="form__label" for="date">Дата выполнения</label>
-
-            <input class="form__input form__input--date" type="text" name="date" id="date" value="" placeholder="Введите дату в формате ГГГГ-ММ-ДД">
-          </div>
-
-          <div class="form__row">
-            <label class="form__label" for="file">Файл</label>
-
-            <div class="form__input-file">
-              <input class="visually-hidden" type="file" name="file" id="file" value="">
-
-              <label class="button button--transparent" for="file">
-                <span>Выберите файл</span>
-              </label>
-            </div>
+            <input class="form__input" type="text" name="name" id="project_name" value="" placeholder="Введите название проекта">
           </div>
 
           <div class="form__row form__row--controls">
@@ -166,12 +139,10 @@
       <span class="visually-hidden">Разработано:</span>
 
       <a href="https://htmlacademy.ru/intensive/php">
-        <img src="../img/htmlacademy.svg" alt="HTML Academy" width="118" height="40">
+        <img src="../../img/htmlacademy.svg" alt="HTML Academy" width="118" height="40">
       </a>
     </div>
   </div>
 </footer>
-<script src="../flatpickr.js"></script>
-<script src="../script.js"></script>
 </body>
 </html>
