--- a/templates/pages/form-authorization.html
+++ b/templates/pages/form-authorization.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
-  <link rel="stylesheet" href="../css/normalize.css">
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../../css/normalize.css">
+  <link rel="stylesheet" href="../../css/style.css">
 </head>
 
 <body>
@@ -13,76 +13,52 @@
 
 <div class="page-wrapper">
   <div class="container container--with-sidebar">
+
     <header class="main-header">
       <a href="#">
-        <img src="../img/logo.png" width="153" height="42" alt="Логитип Дела в порядке">
+        <img src="../../img/logo.png" width="153" height="42" alt="Логитип Дела в порядке">
       </a>
 
       <div class="main-header__side">
-        <a class="main-header__side-item button button--plus" href="form-task.html">Добавить задачу</a>
-
-        <div class="main-header__side-item user-menu">
-          <div class="user-menu__data">
-            <p>Константин</p>
-
-            <a href="#">Выйти</a>
-          </div>
-        </div>
+        <a class="main-header__side-item button button--transparent" href="form-authorization.html">Войти</a>
       </div>
     </header>
 
     <div class="content">
+
       <section class="content__side">
-        <h2 class="content__side-heading">Проекты</h2>
+        <p class="content__side-info">Если у вас уже есть аккаунт, авторизуйтесь на сайте</p>
 
-        <nav class="main-navigation">
-          <ul class="main-navigation__list">
-            <li class="main-navigation__list-item">
-              <a class="main-navigation__list-item-link" href="#">Входящие</a>
-              <span class="main-navigation__list-item-count">24</span>
-            </li>
-
-            <li class="main-navigation__list-item main-navigation__list-item--active">
-              <a class="main-navigation__list-item-link" href="#">Работа</a>
-              <span class="main-navigation__list-item-count">12</span>
-            </li>
-
-            <li class="main-navigation__list-item">
-              <a class="main-navigation__list-item-link" href="#">Здоровье</a>
-              <span class="main-navigation__list-item-count">3</span>
-            </li>
-
-            <li class="main-navigation__list-item">
-              <a class="main-navigation__list-item-link" href="#">Домашние дела</a>
-              <span class="main-navigation__list-item-count">7</span>
-            </li>
-
-            <li class="main-navigation__list-item">
-              <a class="main-navigation__list-item-link" href="#">Авто</a>
-              <span class="main-navigation__list-item-count">0</span>
-            </li>
-          </ul>
-        </nav>
-
-        <a class="button button--transparent button--plus content__side-button" href="form-project.html">Добавить проект</a>
+        <a class="button button--transparent content__side-button" href="form-authorization.html">Войти</a>
       </section>
 
       <main class="content__main">
-        <h2 class="content__main-heading">Добавление проекта</h2>
+        <h2 class="content__main-heading">Вход на сайт</h2>
 
-        <form class="form"  action="index.html" method="post" autocomplete="off">
+        <form class="form" action="index.html" method="post" autocomplete="off">
           <div class="form__row">
-            <label class="form__label" for="project_name">Название <sup>*</sup></label>
+            <label class="form__label" for="email">E-mail <sup>*</sup></label>
 
-            <input class="form__input" type="text" name="name" id="project_name" value="" placeholder="Введите название проекта">
+            <input class="form__input form__input--error" type="text" name="email" id="email" value="" placeholder="Введите e-mail">
+
+            <p class="form__message">E-mail введён некорректно</p>
+          </div>
+
+          <div class="form__row">
+            <label class="form__label" for="password">Пароль <sup>*</sup></label>
+
+            <input class="form__input" type="password" name="password" id="password" value="" placeholder="Введите пароль">
           </div>
 
           <div class="form__row form__row--controls">
-            <input class="button" type="submit" name="" value="Добавить">
+            <input class="button" type="submit" name="" value="Войти">
           </div>
         </form>
+
       </main>
+
     </div>
+
   </div>
 </div>
 
@@ -93,8 +69,6 @@
 
       <p>Веб-приложение для удобного ведения списка дел.</p>
     </div>
-
-    <a class="main-footer__button button button--plus" href="form-task.html">Добавить задачу</a>
 
     <div class="main-footer__social social">
       <span class="visually-hidden">Мы в соцсетях:</span>
@@ -139,10 +113,11 @@
       <span class="visually-hidden">Разработано:</span>
 
       <a href="https://htmlacademy.ru/intensive/php">
-        <img src="../img/htmlacademy.svg" alt="HTML Academy" width="118" height="40">
+        <img src="../../img/htmlacademy.svg" alt="HTML Academy" width="118" height="40">
       </a>
     </div>
   </div>
 </footer>
+
 </body>
 </html>
