--- a/templates/pages/form-task.html
+++ b/templates/pages/form-task.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
-  <link rel="stylesheet" href="../css/normalize.css">
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../../css/normalize.css">
+  <link rel="stylesheet" href="../../css/style.css">
+  <link rel="stylesheet" href="../../css/flatpickr.min.css">
 </head>
 
 <body>
@@ -13,52 +14,102 @@
 
 <div class="page-wrapper">
   <div class="container container--with-sidebar">
-
     <header class="main-header">
       <a href="#">
-        <img src="../img/logo.png" width="153" height="42" alt="Логитип Дела в порядке">
+        <img src="../../img/logo.png" width="153" height="42" alt="Логитип Дела в порядке">
       </a>
 
       <div class="main-header__side">
-        <a class="main-header__side-item button button--transparent" href="form-authorization.html">Войти</a>
+        <a class="main-header__side-item button button--plus" href="form-task.html">Добавить задачу</a>
+
+        <div class="main-header__side-item user-menu">
+          <div class="user-menu__data">
+            <p>Константин</p>
+
+            <a href="#">Выйти</a>
+          </div>
+        </div>
       </div>
     </header>
 
     <div class="content">
-
       <section class="content__side">
-        <p class="content__side-info">Если у вас уже есть аккаунт, авторизуйтесь на сайте</p>
+        <h2 class="content__side-heading">Проекты</h2>
 
-        <a class="button button--transparent content__side-button" href="form-authorization.html">Войти</a>
+        <nav class="main-navigation">
+          <ul class="main-navigation__list">
+            <li class="main-navigation__list-item">
+              <a class="main-navigation__list-item-link" href="#">Входящие</a>
+              <span class="main-navigation__list-item-count">24</span>
+            </li>
+
+            <li class="main-navigation__list-item main-navigation__list-item--active">
+              <a class="main-navigation__list-item-link" href="#">Работа</a>
+              <span class="main-navigation__list-item-count">12</span>
+            </li>
+
+            <li class="main-navigation__list-item">
+              <a class="main-navigation__list-item-link" href="#">Здоровье</a>
+              <span class="main-navigation__list-item-count">3</span>
+            </li>
+
+            <li class="main-navigation__list-item">
+              <a class="main-navigation__list-item-link" href="#">Домашние дела</a>
+              <span class="main-navigation__list-item-count">7</span>
+            </li>
+
+            <li class="main-navigation__list-item">
+              <a class="main-navigation__list-item-link" href="#">Авто</a>
+              <span class="main-navigation__list-item-count">0</span>
+            </li>
+          </ul>
+        </nav>
+
+        <a class="button button--transparent button--plus content__side-button" href="form-project.html">Добавить проект</a>
       </section>
 
       <main class="content__main">
-        <h2 class="content__main-heading">Вход на сайт</h2>
+        <h2 class="content__main-heading">Добавление задачи</h2>
 
-        <form class="form" action="index.html" method="post" autocomplete="off">
+        <form class="form"  action="index.html" method="post" autocomplete="off">
           <div class="form__row">
-            <label class="form__label" for="email">E-mail <sup>*</sup></label>
+            <label class="form__label" for="name">Название <sup>*</sup></label>
 
-            <input class="form__input form__input--error" type="text" name="email" id="email" value="" placeholder="Введите e-mail">
-
-            <p class="form__message">E-mail введён некорректно</p>
+            <input class="form__input" type="text" name="name" id="name" value="" placeholder="Введите название">
           </div>
 
           <div class="form__row">
-            <label class="form__label" for="password">Пароль <sup>*</sup></label>
+            <label class="form__label" for="project">Проект <sup>*</sup></label>
 
-            <input class="form__input" type="password" name="password" id="password" value="" placeholder="Введите пароль">
+            <select class="form__input form__input--select" name="project" id="project">
+              <option value="">Входящие</option>
+            </select>
+          </div>
+
+          <div class="form__row">
+            <label class="form__label" for="date">Дата выполнения</label>
+
+            <input class="form__input form__input--date" type="text" name="date" id="date" value="" placeholder="Введите дату в формате ГГГГ-ММ-ДД">
+          </div>
+
+          <div class="form__row">
+            <label class="form__label" for="file">Файл</label>
+
+            <div class="form__input-file">
+              <input class="visually-hidden" type="file" name="file" id="file" value="">
+
+              <label class="button button--transparent" for="file">
+                <span>Выберите файл</span>
+              </label>
+            </div>
           </div>
 
           <div class="form__row form__row--controls">
-            <input class="button" type="submit" name="" value="Войти">
+            <input class="button" type="submit" name="" value="Добавить">
           </div>
         </form>
-
       </main>
-
     </div>
-
   </div>
 </div>
 
@@ -69,6 +120,8 @@
 
       <p>Веб-приложение для удобного ведения списка дел.</p>
     </div>
+
+    <a class="main-footer__button button button--plus" href="form-task.html">Добавить задачу</a>
 
     <div class="main-footer__social social">
       <span class="visually-hidden">Мы в соцсетях:</span>
@@ -113,11 +166,12 @@
       <span class="visually-hidden">Разработано:</span>
 
       <a href="https://htmlacademy.ru/intensive/php">
-        <img src="../img/htmlacademy.svg" alt="HTML Academy" width="118" height="40">
+        <img src="../../img/htmlacademy.svg" alt="HTML Academy" width="118" height="40">
       </a>
     </div>
   </div>
 </footer>
-
+<script src="../flatpickr.js"></script>
+<script src="../script.js"></script>
 </body>
 </html>
